--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
             </div>
         </div>
     </nav>
+    <section id="profile" >
+        <div class="section__pic-container "> 
+            <img src="./assets/profile-pic.png" alt="John doe profile pic">
+        </div>
+        <div class="section__text">
+            <p class="section__test__p1">Hello, I'm</p>
+            <h1 class="title">Oumalkaire Aboubakar</h1>
+            <p class="section__text__p2">Computer science Student</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/Oumalkaire Aboubakar cv.pdf')">Download cv</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">contact info</button>
+            </div>
+            <div id="social-container">
+                <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://linkedin.com/in/oumalkaire-aboubaker/'">
+                <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/oumaabou'">
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
